k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: speedmotorskubectl apply -f namespace.yml
