k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend
  namespace: speedmotors

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend

          image: shivamrajdocker/speedmotors-backend:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 5000
